[tool.poetry]
name = "fish-vision"
version = "0.1.0"
description = "Repository for topological analysis of hurricane images"
authors = ["Philip Bretz"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
